fix whitespace, testing colors..

--- a/css/manythingsblue.css
+++ b/css/manythingsblue.css
@@ -1,151 +1,170 @@
 body {
-	font-family: "chaparral pro";
+  font-family: "chaparral pro";
+  background: #fff;
 }
 
 a {
-	color:#0079E7;
-	border-bottom: solid 1px #ddd;
+  color:#0079E7;
+  border-bottom: solid 1px #ddd;
   text-decoration: none;
 }
 a:visited {
-	color:#1D5B93;
+  color:#1D5B93;
 }
 a:hover {
-	color:#57A5EC;
+  color:#57A5EC;
 }
 
 ul.plain, ol.plain {
-	list-style-position:inside;
+  list-style-position:inside;
 }
 
 h1, h2, h3, h4 {
-	text-rendering: optimizeLegibility;
+  text-rendering: optimizeLegibility;
   font-feature-settings: "kern" 1;
 }
 
 h2 {
-	font-weight: 100; 
+  font-weight: 100; 
 }
 
 #recipe {
-	background:#eee;
-	background:url(../img/congruent_outline.png) ;
-	padding:20px;
-	color:#fff;
+  background:#eee;
+  background:url(../img/congruent_outline.png) ;
+  padding:20px;
+  color:#fff;
   margin: 20px;
   border-radius: 10px;
 }
 
 .recipe {
-	padding:15px;
+  padding:15px;
 }
 
 .container {
-	display: flex;
-
-	// background:url(../img/congruent_outline.png) repeat-x 100px 200px ;
+  display: flex;
 }
 
 #overview {
-	text-align: center;
-	max-width: 600px;
-	margin: 0 auto;
-	padding:0 20px;
+  text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
+  padding:0 20px;
+
+  background: #456990;
+  color: #eee;
 }
 #overview h1 {
-	font-size: 4.7em;
-	font-family: "soleil"; /*"Avenir Next Condensed";*/
-	font-weight: 600;
-	text-transform: uppercase;
-	color:#5F8ED3;
-	text-shadow: -.02em .02em 0 #fff,.02em .02em 0 #fff,0 .02em 0 #fff;
+  font-size: 3.7em;
+  font-family: "soleil"; /*"Avenir Next Condensed";*/
+  font-weight: 600;
+  text-transform: uppercase;
+  color:#fff;
+  text-shadow: -.02em .02em 0 #000,.02em .02em 0 #000,0 .02em 0 #000;
 }
 #overview h1 span {
-	display: inline-block;
+  display: inline-block;
+}
+
+#overview a {
+  color:#fff;
 }
 
 ul#focus-skills {
-	list-style: none;
-	padding: 0;
+  list-style: none;
+  padding: 0;
 }
 ul#focus-skills li {
-	
-	// colosr:#fff;
-	padding:0px;
-	display: inline-block;	
-	margin:0 20px;
+  
+  color:#fff;
+  padding:0px;
+  display: inline-block;  
+  margin:0 20px;
 }
 ul#focus-skills li .fa {
-	font-size: 50%;
-	position: relative;
-	top:-2px;
+  font-size: 50%;
+  position: relative;
+  top:-2px;
 }
 
 
 #additional-skills {
-	// font-size:80%;
-	margin:0;padding:0;
-	list-style: none;
+  // font-size:80%;
+  margin:0;padding:0;
+  list-style: none;
 }
 
 #additional-skills li {
-	display: inline-block;
-	margin: 10px 15px;
+  display: inline-block;
+  margin: 10px 15px;
 }
 #additional-skills li:nth-child(7) {
-	color:#888;
+  color:#ddd;
 }
 #additional-skills li:nth-child(6) {
-	color:#777;
+  color:#ddd;
 }
 #additional-skills li:nth-child(5) {
-	color:#666;
+  color:#ddd;
 }
 #additional-skills li:nth-child(4) {
-	color:#555;
+  color:#ddd;
 }
 #additional-skills li:nth-child(3) {
-	color:#444;
+  color:#ddd;
 }
 #additional-skills li:nth-child(2) {
-	color:#333;
+  color:#ddd;
 }
 #additional-skills li:nth-child(1) {
-	color:#222;
+  color:#ddd;
 }
 
 #main-content {
-	padding: 20px;
+  padding: 20px;
 }
 
 .col-2 {
-	display: flex;
-	flex-direction:row;
-	flex-wrap: wrap;
+  display: flex;
+  flex-direction:row;
+  flex-wrap: wrap;
 }
 
 #personal, #recipe {
-	flex: 1;
+  flex: 1;
 }
 
 
 .game {
-	flex: 1;
+  flex: 1;
 }
 
 footer {
-	padding: 1em 0;
-	border-top:dashed 1px #ddd;
-	text-align: center;
-	font-style: italic;
+  padding: 1em 0;
+  border-top:dashed 1px #ddd;
+  text-align: center;
+  font-style: italic;
+}
+
+@media (max-width: 900px) {
+  .container {
+    flex-direction: column;
+  }
+  #main-content {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  #overview {
+    // font-size: 2em;
+    max-width: 100%;
+    padding-bottom: 20px;
+    margin:0;
+  }
 }
 
 @media (max-width: 1200px) {
-	.container {
-		flex-direction: column;
-	}
-	#main-content {
-    max-width: 800px;
-    margin: 0 auto;
+  .col-2 {
+    flex-direction: column;
   }
 }
